kubernetes/templates/frontend-nodeport-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  selector:
    app: guestbook
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  # comment or delete the following line if you want to use a LoadBalancer
  type: NodePort
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
