kubernetes/templates/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  selector:
    app: guestbook
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: ClusterIP # default type
