kubernetes/templates/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    serviceName: frontend
    servicePort: 8080
